Add OpenAI summaries and Playback UI updates

--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,11 @@
 
         <aside class="detail">
           <div class="detail-card">
+            <div class="detail-title">Session Summary</div>
+            <div id="summaryBody" class="detail-body">No summary yet.</div>
+            <button id="summaryBtn" class="summary-btn">Generate summary</button>
+          </div>
+          <div class="detail-card">
             <div class="detail-title">Step Details</div>
             <div id="detailBody" class="detail-body">Load a session to begin.</div>
           </div>
