--- a/public/index.html
+++ b/public/index.html
@@ -95,6 +95,8 @@
           <div class="detail-card">
             <div class="detail-title">Step Details</div>
             <div id="detailBody" class="detail-body">Load a session to begin.</div>
+            <button id="stepSummaryBtn" class="summary-btn">Summarize step</button>
+            <div id="stepSummaryBody" class="detail-body">No step summary yet.</div>
           </div>
         </aside>
       </main>
